# AIBox

./: .env.example  .gitignore  README.md  SHARE_UBUNTU.txt  SHARE_WITH_FRIENDS.txt  TODO.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  chat.py  deps.py  documents.py  models.py  system.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  chat_message.py  chat_session.py  document.py  document_chunk.py  user.py
backend/app/providers/: __init__.py  base.py  embedding_provider.py  fastembed_embedding.py  mock_embedding.py  mock_llm.py  ollama_llm.py
backend/app/schemas/: auth.py  chat.py  documents.py  ollama_models.py
backend/app/services/: bootstrap.py  chat_context.py  chunking.py  ingestion.py  jwt_tokens.py  parsing.py  passwords.py  qdrant_chunks.py  rag.py  rag_ollama.py  storage.py  system_status.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_chat_context.py  test_chunking.py  test_documents.py  test_embedding_provider.py  test_health.py  test_integration_stack.py  test_mock_providers.py  test_models_api.py  test_parsing.py  test_rag.py  test_rag_ollama.py  test_rag_overlap.py  test_rag_ranking.py  test_system_status.py
backend/tests/fixtures/: sample.txt
docs/: OWNER_SETUP.md  index.html  style.css
launcher/: go.mod  main.go
privateai_cursor_pack/: 00_CURSOR_START_HERE.md  01_PRODUCT_SPEC.md  02_ARCHITECTURE.md  03_PHASED_BUILD_PLAN.md  README.md  (+4 more)
(+40 files in other folders)
