[project]
name = "privateai-backend"
version = "0.1.0"
description = "PrivateAI Box API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.12",
  "uvicorn[standard]>=0.32.0",
  "pydantic-settings>=2.6.0",
  "email-validator>=2.2.0",
  "sqlalchemy>=2.0.36",
  "psycopg2-binary>=2.9.10",
  "qdrant-client>=1.12.0,<1.13.0",
  "PyJWT>=2.9.0",
  "bcrypt>=4.2.0",
  "pypdf>=5.1.0",
  "python-docx>=1.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires Postgres and Qdrant (STACK_TEST=1)"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
